# ChemInformant

./: .flake8  .gitignore  .txt with specific version constraints  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  benchmark.py  codecov.yml  minimal_batch_test.py  mkdocs.yml  pyproject.toml  pytest-benchmark.ini  readme_test.py  requirements.txt  tatus
.github/workflows/: docs-deploy.yml  docs.yml  lint.yml  python-ci.yml  tests.yml
conda-recipe/: meta.yaml
docs/: .buildinfo  api.html  api.md  genindex.html  index.html  index.md  notebook.md  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  usage.html  usage.md
docs/.doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
docs/.doctrees/api/: ChemInformant.api_helpers.doctree  ChemInformant.cheminfo_api.doctree  ChemInformant.models.doctree
docs/_build/html/: .buildinfo  advanced_usage.html  basic_usage.html  caching_guide.html  cli.html  contributing.html  genindex.html  index.html  installation.html  layout.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/_build/html/.doctrees/: advanced_usage.doctree  basic_usage.doctree  caching_guide.doctree  cli.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  tutorials.doctree
docs/_build/html/.doctrees/_sources/: changelog.doctree  index.doctree  usage.doctree
docs/_build/html/.doctrees/_sources/api/: ChemInformant.api_helpers.doctree  ChemInformant.cheminfo_api.doctree  ChemInformant.models.doctree  index.doctree
docs/_build/html/.doctrees/api/: api_helpers.doctree  cheminfo_api.doctree  models.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ChemInformant/: api_helpers.html  cheminfo_api.html  models.html
docs/_build/html/_sources/: caching_guide.rst.txt  changelog.html  contributing.rst.txt  index.html  installation.rst.txt  usage.html
docs/_build/html/_sources/_sources/: changelog.md.txt  index.rst.txt  usage.rst.txt
docs/_build/html/_sources/_sources/api/: ChemInformant.cheminfo_api.rst.txt
docs/_build/html/_sources/api/: ChemInformant.api_helpers.html  ChemInformant.cheminfo_api.html  ChemInformant.models.html  cheminfo_api.rst.txt  index.html  models.rst.txt
docs/_build/html/_static/: copybutton.js  custom.css  schema_org.json  syntax_highlighting.css
docs/_build/html/api/: api_helpers.html  cheminfo_api.html  models.html
docs/_modules/: index.html
docs/_modules/ChemInformant/: api_helpers.html  cheminfo_api.html  models.html
docs/_sources/: api.rst.txt  changelog.md  index.rst.txt  usage.rst.txt
docs/_sources/api/: ChemInformant.api_helpers.rst  ChemInformant.models.rst
docs/api/: ChemInformant.api_helpers.html  ChemInformant.cheminfo_api.html  ChemInformant.models.html
docs/source/: advanced_usage.rst  api_reference.rst  basic_usage.rst  caching_guide.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  tutorials.rst
docs/source/api/: api_helpers.rst  cheminfo_api.rst  models.rst
examples/: ChemInformant_User_Manual_fixed.ipynb  ChemInformant_User_Manual_v1.0.ipynb  basic_usage.py  example_usage.py  test_cheminfo.py
paper/: paper.bib  paper.md
src/: __init__.py  api_helpers.py  cheminfo_api.py  compound_details.py  drug_data_integration.py
src/ChemInformant/: __init__.py  api_helpers.py  cheminfo_api.py  cli.py  constants.py  models.py  py.typed  sql.py
tests/: test_api.py  test_api_helpers.py  test_api_helpers_unit.py  test_benchmarks.py  test_cache.py  test_cheminfo_api_unit.py  test_ci.py  test_cli_integration.py  test_cli_unit.py  test_models.py  test_sql.py
